projeto simplificado, removido acesso ao CEI/selenium, testes atualizados e executados sem falhas, testando outras bibliotecas de plotagem de dados

--- a/rebalanceamento/templates/rebalanceamento/base.html
+++ b/rebalanceamento/templates/rebalanceamento/base.html
@@ -15,9 +15,10 @@
         	<div class="d-flex justify-content-center h-70 mt-4">
 	        	<div class="card bg-white mt-4 mb-4 border-dark rounded-4 shadow-lg" style="width: 50rem;">
                     <div class="card-header text-center border-dark rounded-4">
-                        <h1 class="card-title">
-                            <h1>Rebalanceamento de carteira</h1>
+                        <h1 class="card-title mt-4">
+                            Rebalanceamento de carteira
                         </h1>
+                        Planejamento de aporte em carteira de ações "Buy and Hold"
                     </div>
                     <div class="card-body">
                             {% block content %}
