--- a/rebalanceamento/templates/rebalanceamento/plotPlan.html
+++ b/rebalanceamento/templates/rebalanceamento/plotPlan.html
@@ -31,6 +31,8 @@
     {{ walletDiv | safe }}
     <br>
     {{ factorDiv | safe }}
+    <br>
+    {{ VPADiv | safe }}
   </div>
 {% endblock %}
 
@@ -39,4 +41,5 @@
 {{ walletScript | safe }}
 {{ factorScript | safe }} 
 {{ allocationScript | safe }}
+{{ VPAScript | safe }}
 {% endblock %}
