--- a/rebalanceamento/templates/rebalanceamento/base.html
+++ b/rebalanceamento/templates/rebalanceamento/base.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Rebalanceamento de carteira</title>
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-        <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet" type="text/css">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        
    </head>
     <body class="bg-primary">
         	<div class="d-flex justify-content-center h-70 mt-4">
@@ -24,12 +24,8 @@
                 </div>
             </div>
     <script src="{% static 'js/jquery-3.3.1.slim.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/bokeh-1.4.0.min.js' %} "></script>
-    <script src="{% static 'js/bokeh-widgets-1.4.0.min.js' %}"></script>
-    <script src="{% static 'js/bokeh-tables-1.4.0.min.js' %}"></script>
-    <script src="{% static 'js/bokeh-api-1.4.0.min.js' %}"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     {% block extraScripts %}
     {% endblock %}
     </body>
