--- a/rebalanceamento/templates/rebalanceamento/base.html
+++ b/rebalanceamento/templates/rebalanceamento/base.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             </div>
-    <script src="{% static 'js/jquery-3.3.1.slim.min.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     {% block extraScripts %}
