espaçamento e cores do frontend melhoradas

--- a/rebalanceamento/templates/rebalanceamento/base.html
+++ b/rebalanceamento/templates/rebalanceamento/base.html
@@ -21,6 +21,12 @@
                             {% block content %}
                             {% endblock %}
                     </div>
+                    <footer class="footer text-center border border-dark rounded-4 border-left-0 border-right-0 border-bottom-0">
+                        <a href="https://github.com/icaromarley5/rebalanceamento_acoes">Repositório do projeto</a></br>
+                        Por Ícaro Marley &nbsp;<a href = "mailto: icaromarley5@gmail.com">Email</a>
+                        <a href="https://www.linkedin.com/in/icaro-marley/">Linkedin</a>
+                        </br>
+                    </footer>
                 </div>
             </div>
     <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script> 
