--- a/rebalanceamento/templates/rebalanceamento/plotPlan.html
+++ b/rebalanceamento/templates/rebalanceamento/plotPlan.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="text-center">
   Ações recomendadas:<br><br>
-  <div class="card border-dark">
-      <table class="table table-sm table-hover">
+  <div class="card border-grey">
+      <table class="table table-sm table-hover table-borderless">
         <thead>
           <tr>
             <th scope="col">Ticker</th>
