--- a/rebalanceamento/templates/rebalanceamento/confirmWallet.html
+++ b/rebalanceamento/templates/rebalanceamento/confirmWallet.html
@@ -1,55 +1,66 @@
 {% extends 'rebalanceamento/base.html' %}
 {% block content %}
 
+<style>
+
+.select2-dropdown.select2-dropdown--below{
+    border-color:#dee2e6;
+} 
+
+
+</style>
 <div class="d-flex align-items-center flex-column">
-Confirme o valor do aporte, o ticker, a quantidade de ações e as porcentagens de cada ativo:<br><br>
-    <form action="{% url 'confirmWallet' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group col-6 m-0 pl-0">
-            <table class="table table-sm table-hover">
-                {{capitalForm.as_table}}
+    <p class="text-center">
+        Para cada ativo, confirme o ticker, a quantidade de ações e a porcentagem alvo. </br>
+        Por último, digite o valor do aporte:
+    </p>
+  
+        <form action="{% url 'confirmWallet' %}" method="post">
+            {% csrf_token %}
+            {{walletFormSet.management_form}}
+            <table id="formset-table-empty" style="display: none">
+                {{walletFormSet.empty_form}}
             </table>
-        </div>
-
-        {{walletFormSet.management_form}}
-        <table id="formset-table-empty" style="display: none">
-            {{walletFormSet.empty_form}}
-        </table>
-
-        <table class="table  table-hover">
-            <thead>
-                {% for form in walletFormSet %}
-                    {% if forloop.first %}
-                        {% for field in form %}
-                            <th scope="col">{{ field.label_tag }}</th>
+            <div class="input-group-sm">
+                <table class="table table-borderless table-sm">
+                    <thead>
+                        {% for form in walletFormSet %}
+                            {% if forloop.first %}
+                                {% for field in form %}
+                                    <th scope="col">{{ field.label_tag }}</th>
+                                {% endfor %}
+                            {% endif %}
                         {% endfor %}
-                    {% endif %}
-                {% endfor %}
-            </thead>
-            <tbody class="walletForm">
-                {% for form in walletFormSet %}
-                    <tr class="dynamic-form">
-                        {% for field in form %}
-                            <td>{{ field }}</td>
+                    </thead>
+                    <tbody class="walletForm">
+                        {% for form in walletFormSet %}
+                            <tr class="dynamic-form">
+                                {% for field in form %}
+                                    <td>{{ field }}</td>
+                                {% endfor %}
+                            </tr>
                         {% endfor %}
-                    </tr>
+                        <tr class="dynamic-form"> </tr>
+                    </tbody>
+                </table>
+            </div>
+            {% for form in walletFormSet %}
+                {% for key, errorList in form.errors.items %}
+                    {{errorList}}
                 {% endfor %}
-                <tr class="dynamic-form"> </tr>
-            </tbody>
-        </table>
-        {% for form in walletFormSet %}
-            {% for key, errorList in form.errors.items %}
-                {{errorList}}
             {% endfor %}
-        {% endfor %}
-        <button type="button" class="add-row btn btn-primary ">
-            +
-        </button>
-        <button type="button" class="delete-row btn btn-primary ">
-            -
-        </button>
-        <input class="btn btn-primary" type="submit" value="Confirmar">
-    </form>
+            <div class="d-flex align-items-center flex-column">
+                <p>
+                    <a class="add-row btn btn-primary text-light">+</a>
+                    <a class="delete-row btn btn-primary text-light ">-</a>
+                </p>
+                    {% for field in capitalForm %}
+                    <b>{{field.label_tag}}</b><div class="col-sm-3">{{field}}</div>
+                    </br>
+                    {% endfor %}
+                <input class="btn btn-primary" type="submit" value="Confirmar">
+            </div>
+        </form>
 </div>
 {% endblock %}
 
