--- a/rebalanceamento/templates/rebalanceamento/confirmWallet.html
+++ b/rebalanceamento/templates/rebalanceamento/confirmWallet.html
@@ -54,17 +54,15 @@
                     {{errorList}}
                 {% endfor %}
             {% endfor %}
-            <div class="d-flex align-items-center flex-column">
-                <p>
-                    <a class="add-row btn btn-primary text-light">+</a>
-                    <a class="delete-row btn btn-primary text-light ">-</a>
-                </p>
-                    {% for field in capitalForm %}
-                    <b>{{field.label_tag}}</b><div class="col-sm-3">{{field}}</div>
-                    </br>
-                    {% endfor %}
-                <input class="btn btn-primary" type="submit" value="Confirmar">
+            <div class="d-flex justify-content-around w-25">
+                    <a class="add-row btn btn-primary text-light" style="width:3em;">+</a>
+                    <a class="delete-row btn btn-primary text-light" style="width:3em;">-</a>
             </div>
+            {% for field in capitalForm %}
+                <b>{{field.label_tag}}</b><div class="w-25">{{field}}</div>
+                </br>
+            {% endfor %}
+            <input class="btn btn-primary" type="submit" value="Confirmar">
         </form>
 </div>
 {% endblock %}
