--- a/rebalanceamento/templates/rebalanceamento/plotPlan.html
+++ b/rebalanceamento/templates/rebalanceamento/plotPlan.html
@@ -31,13 +31,12 @@
   </div>
   <br>
   <div class="d-flex align-items-center flex-column">
+    <div class="brugh" style="width: 100%;">
     {{ allocationFig | safe }}
-    <br>
     {{ walletFig | safe }}
-    <br>
     {{ factorFig | safe }}
-    <br>
     {{ VPAFig | safe }}
+    </div>
   </div>
 {% endblock %}
 
