melhorada documentação no template de confirmação de carteira, performance de renderização dos gráficos melhorada

--- a/rebalanceamento/templates/rebalanceamento/base.html
+++ b/rebalanceamento/templates/rebalanceamento/base.html
@@ -9,6 +9,8 @@
         <link href="{% static 'css/rebalanceamento.css'%}" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
         <link rel="shortcut icon" href="{%  static 'favicon/favicon.png' %}">
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_SVG"></script>
    </head>
     <body class="bg-primary">
         <div align="center">
