--- a/rebalanceamento/templates/rebalanceamento/confirmWallet.html
+++ b/rebalanceamento/templates/rebalanceamento/confirmWallet.html
@@ -7,7 +7,7 @@
 
 <div class="d-flex align-items-center flex-column">
     <p class="text-center">
-        Para cada ativo, confirme o ticker, a quantidade de ações e a porcentagem alvo. </br>
+        Confirme o ticker, a quantidade de ações e a porcentagem alvo (pode ser emitida).</br>
         Por último, digite o valor do aporte:
     </p>
     <form action="{% url 'confirmWallet' %}" method="post">
