--- a/rebalanceamento/static/css/rebalanceamento.css
+++ b/rebalanceamento/static/css/rebalanceamento.css
@@ -43,7 +43,18 @@ input[type="number"]{
     height: 29px!important;
     width: 15vmin !important;
     min-width: 6em !important;
-    -webkit-appearance: none;
+}
+
+/* Remove spiners, Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove spinners, Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 .select2-container{
