validação de tamanho máximo em envio arquivo (1mb), melhorada padronização de cores no formulário de ativos, função de coleta alterada para pegar valores mais próximos da cotação em tempo real

--- a/rebalanceamento/static/css/rebalanceamento.css
+++ b/rebalanceamento/static/css/rebalanceamento.css
@@ -25,8 +25,8 @@ body{
 }
 
 /* forms */
-.select2-dropdown.select2-dropdown--below{
-    border-color:#0074d9;
+.select2-dropdown--below, .select2-dropdown--above{
+    border-color:#0074d9 !important;
 }
 
 .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
