adicionado logging de erros no ambiente de produção, porcentagem alvo adicioada para preenchimento via arquivo,  suporte à ações fracionárias adicionado

--- a/rebalanceamento/templates/rebalanceamento/home.html
+++ b/rebalanceamento/templates/rebalanceamento/home.html
@@ -8,8 +8,10 @@
 	<p>
 		Se desejar preencher automaticamente os dados da sua carteira, carregue um arquivo "CSV" com seus ativos (o envio é opcional).<br><a type="button" class="helpButton btn btn-primary text-light btn-sm">?</a>
 		<div class="helpText container" style="display:none;">
-			<em>O arquivo pode ser preenchido <a href="{% static 'files/Modelo de Arquivo.csv' %}">manualmente</a> ou coletado do CEI.
-			Para coletar do CEI, acesse CEI/Carteira de ativos, copie a tabela (sem cabeçalho e rodapé) e salve com a extensão 'CSV'<br>
+			<em>
+				<a href="{% static 'files/Modelo de Arquivo.csv' %}">
+					Modelo para preenchimento
+				</a>
 			</em>
 		</div>
 	</p>
